# extended-type

./: LICENSE  README.md  example.py  pyproject.toml
extended_type/: __init__.py  contains_str.py  extended_type_validator.py  prefix_str.py  pydantic_compatibility.py  range_decimal.py  range_float.py  range_int.py  range_numeric.py  regex_str.py  suffix_str.py  type_extended.py  utils.py  validatable.py
